--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           alt="ted bilik"
           class="w-8/12 max-w-lg rounded-2xl bg-slate-100 p-4"
         />
-        <h1 class="font-bold text-slate-100">Sinif Seçimi Sorğusu</h1>
+        <h1 class="font-bold text-slate-100">Sinif Bəlirləmə Sorğusu</h1>
         <h2 class="text-slate-100">
           Bu sorğunun məqsədi sizə uyğun olan hazırlıq sinfini seçməkdir. Ən
           uğurlu seçim üçün sorğunu bir dəfə doldurun.
