no more mixed api

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       import { createApp } from "https://unpkg.com/petite-vue?module";
       import PocketBase from "./pocketbase.es.mjs";
 
-      const pb = new PocketBase("http://217.160.75.124:3333");
+      const pb = new PocketBase("https://3d459b3.online-server.cloud/");
       createApp({
         name: null,
         grade: null,
