--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         >
           <label for="name">Ad və soyadınız: </label>
           <input
-            class="text-black"
+            class="text-black p-1"
             placeholder="Barış Namazov"
             autocomplete="off"
             id="name"
@@ -128,7 +128,7 @@
           />
           <label for="phoneNum">Əlaqə nömrəniz</label>
           <input
-            class="text-black"
+            class="text-black p-1"
             placeholder="055 939 88 48"
             autocomplete="off"
             id="phoneNum"
@@ -138,7 +138,7 @@
           />
           <label for="email">Email adresiniz</label>
           <input
-            class="text-black"
+            class="text-black p-1"
             placeholder="ted@bilik.edu.az"
             autocomplete="off"
             id="email"
@@ -151,7 +151,7 @@
             id="grade"
             name="grade"
             required
-            class="text-black"
+            class="text-black p-1"
             v-model="grade"
           >
             <option value="4-">4 və ya aşağı</option>
