--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           @submit.prevent="qIndex = 1"
           v-else-if="qIndex === null"
         >
-          <label for="name">Ad və soyadınız: </label>
+          <label for="name">Ad və soyadınız</label>
           <input
             class="text-black p-1"
             placeholder="Barış Namazov"
