--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </h1>
         <h2 class="text-slate-100 text-center" v-if="qIndex === null">
           Bu sorğunun məqsədi sizə uyğun olan hazırlıq sinfini seçməkdir. Ən
-          uğurlu nəticə üçün sorğunu bir dəfə doldurun.
+          uğurlu nəticə üçün sorğunu bir dəfə doldurun. Sorğu verdiyiniz cavablara əsasən daha tez sonlana bilər. Əgər hansısa sualınız yaranarsa, bizimlə əlaqə saxlayın, kömək etməyə hazırıq!
         </h2>
       </header>
       <div id="survey">
