--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
         </h1>
         <h2 class="text-slate-100 text-center" v-if="qIndex === null">
           Bu sorğunun məqsədi sizə uyğun olan hazırlıq sinfini seçməkdir. Ən
-          uğurlu nəticə üçün sorğunu bir dəfə doldurun. Sorğu verdiyiniz cavablara əsasən daha tez sonlana bilər. Əgər hansısa sualınız yaranarsa, bizimlə əlaqə saxlayın, kömək etməyə hazırıq!
+          uğurlu nəticə üçün sorğunu bir dəfə doldurun. Sorğu verdiyiniz
+          cavablara əsasən daha tez sonlana bilər. Əgər hansısa sualınız
+          yaranarsa, bizimlə əlaqə saxlayın, kömək etməyə hazırıq!
         </h2>
       </header>
       <div id="survey">
@@ -209,7 +211,7 @@
           <article
             class="mx-2 flex flex-col items-center justify-center gap-3 rounded-xl border-2 p-3 text-slate-100"
           >
-            <p class="mb-2 text-center">{{questions[qIndex].prompt}}</p>
+            <p class="mb-2 text-center" v-html="questions[qIndex].prompt"></p>
 
             <button
               class="min-w-full rounded-lg bg-cyan-700 py-1 text-center hover:cursor-pointer hover:bg-cyan-800"
