--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       };
     </script>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@0;1&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@0;1&display=swap");
       body {
-        font-family: "Source Code Pro", monospace;
+        font-family: "Source Sans Pro", sans-serif;
       }
     </style>
     <script src="./app.js"></script>
@@ -101,8 +101,9 @@
           alt="ted bilik"
           class="w-8/12 max-w-lg rounded-2xl bg-slate-100 p-4"
         />
-        <h1 class="font-bold text-slate-100">
-          İnformatika Sinif Bəlirləmə Sorğusu
+        <h1 class="font-bold text-slate-100 text-center flex flex-col">
+          <span>İnformatika Olimpiadası Hazırlığı üçün</span>
+          <span>Sinif Bəlirləmə Sorğusu</span>
         </h1>
         <h2 class="text-slate-100 text-center" v-if="qIndex === null">
           Bu sorğunun məqsədi sizə uyğun olan hazırlıq sinfini seçməkdir. Ən
