--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <script src="./app.js"></script>
 
     <script type="module">
-      import { createApp, nextTick } from "https://unpkg.com/petite-vue?module";
+      import {
+        createApp,
+        nextTick,
+      } from "https://unpkg.com/petite-vue@0.2.2/dist/petite-vue.es.js";
 
       createApp({
         name: null,
