--- a/kamp/cpp/index.html
+++ b/kamp/cpp/index.html
@@ -72,6 +72,10 @@
       </section>
       <section class="mt-6">
         <h2 class="text-2xl">Qeydlər</h2>
+        <p class="mt-2">Qeydlər dərsdən sonra paylaşılacaq.</p>
+      </section>
+      <!-- <section class="mt-6">
+        <h2 class="text-2xl">Qeydlər</h2>
         <p class="mt-2">
           İlk dərsə xoş gəldiniz! Bu dərsdə C++ dili və olimpiadada onun
           istifadəsindən danışacağıq. Artıq C++ bilirsinizsə, bu, əladır, sizə
@@ -638,14 +642,6 @@ int main() {
           <code>if</code> şərtli ifadələrinin içində) düzgün əməldən istifadə
           edin.
         </p>
-        <!-- <p class="mt-4 border p-3 rounded-xl">
-          <span class="font-semibold">Dil problemi?</span>
-          <br />
-          "<code>if</code> şərti" demək hərfi tərcümədə "şərt şərti" kimi
-          səslənir. İngilis dilində buna "<code>if</code> statement", yəni, "if
-          bəyanı" deyirlər. Dilimizdə isə buna uyğun gələn yaxşı söz ağlıma
-          gəlmir. Sizin tövsiyəniz varmı? Piazza-da bildirin.
-        </p> -->
         <p class="mt-4">
           İndi isə keçək şərtli ifadələrə. Necə edək ki, kodumuz fərqli şərtlər
           altında fərqli davransın? Burada köməyə <code>if</code> çatır. Onun
@@ -767,7 +763,7 @@ int main() {
           tərcüməsi "nə qədər ki" deməkdir. Yəni, nə qədər ki, verilmiş şərt
           ödənir, hansısa kodu icra edəcəyik.
         </p>
-      </section>
+      </section> -->
     </main>
     <script src="/dist/prism.js"></script>
   </body>
