--- a/kamp/cpp/index.html
+++ b/kamp/cpp/index.html
@@ -228,7 +228,7 @@ int main() {
           yazmaqdan çəkinməyin. Bu kiçik kodda, doğrudan da, çox ciddi şeylər
           baş verir.
         </p>
-        <pre><code class="language-python">print("Salam, əziz olimpiadaçılar!")</code></pre>
+        <pre><code>print("Salam, əziz olimpiadaçılar!")</code></pre>
         <p class="mt-4">
           Yuxarıdakı isə eyni kodun Python 3 dilində yazılmasıdır. Necə də sadə
           və gözəl, elə ingilis dili kimi oxunur. Bəs biz niyə istifadə etmirik
