--- a/kamp/cpp/index.html
+++ b/kamp/cpp/index.html
@@ -139,7 +139,7 @@
           axırda vaxtımız çatmır. Ona görə də, ümid edirəm ki, bu qeydləri tam
           şəkildə oxuyarsınız. Həm də, öz təcrübəmdən bilirəm ki, bəzi uşaqlar
           oxumaqla daha rahat öyrənirlər, bu, onlar üçün də yaxşı olar. Vaxtımın
-          azlığı səbəbilə bu yazıları redaktə etməyə vaxtım olmur, ona görə də,
+          azlığı səbəbilə bu yazıları redaktə edə bilmirəm, ona görə də,
           texniki, qrammatik və ya məna səhvləri tapdıqda, mənə bildirməyiniz
           yaxşı olar. İndi isə qayıdaq dərsə.
         </p>
