--- a/kamp/cpp/index.html
+++ b/kamp/cpp/index.html
@@ -106,14 +106,17 @@
       </header>
       <section class="mt-6 no-print">
         <h2 class="text-2xl">Dərsin videosu</h2>
-        <p class="mt-2">
-          Dərsin videosu yükləndikdən sonra bura yerləşdiriləcək.
-        </p>
+        <iframe
+          class="my-4"
+          width="100%"
+          height="400px"
+          src="https://www.youtube.com/embed/D1h4NGyqIT0"
+          title="İnformatika Olimpiadası Hazırlığı üçün Qış Kampı (2023) - Dərs 1"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
       </section>
-      <!-- <section class="mt-6">
-        <h2 class="text-2xl">Qeydlər</h2>
-        <p class="mt-2">Qeydlər dərsdən sonra paylaşılacaq.</p>
-      </section> -->
       <section class="mt-6">
         <header class="flex items-center justify-between">
           <h2 class="text-2xl">Qeydlər</h2>
