--- a/kamp/cpp/index.html
+++ b/kamp/cpp/index.html
@@ -1400,7 +1400,14 @@ int main() {
       </section>
       <section class="mt-6 no-print" id="homework">
         <h2 class="text-2xl">Ev tapşırığı</h2>
-        <p class="mt-2">Ev tapşırığı məsələləri bura əlavə olunacaq.</p>
+        <p class="mt-2">
+          Ev tapşırıqları üçün <a href="https://www.eolymp.com" target="_blank">eolymp</a> saytında yaratdığım qrup var. Əgər qrupa
+          dəvət almamısınızsa, Piazza-da "E-olymp qrupu üçün" başlıqlı
+          paylaşımın altına istifadəçi adınızı qeyd edin. Dərsdə dediyim kimi,
+          ev tapşırığının məqsədi sizin üçün praktikadır, gələn dərsə qədər
+          bitirməyə ehtiyac yoxdur. Bəzi məsələlərin həllini bilirsinizsə və
+          onlar sizin üçün asandırsa, etməyə də bilərsiniz.
+        </p>
       </section>
     </main>
     <script src="/dist/prism.js"></script>
