--- a/kamp/index.html
+++ b/kamp/index.html
@@ -13,7 +13,7 @@
       }
     </style>
   </head>
-  <body class="bg-neutral-800">
+  <body class="bg-neutral-800 break-words">
     <main
       class="text-neutral-200 min-h-screen w-screen px-5 max-w-4xl text-lg mx-auto py-5"
     >
