--- a/kamp/cpp/index.html
+++ b/kamp/cpp/index.html
@@ -38,6 +38,9 @@
         .no-print {
           display: none;
         }
+        ::-webkit-scrollbar {
+          display: none;
+        }
       }
     </style>
     <link rel="stylesheet" href="/dist/prism.css" />
